LIPS-285 [Client Issue] - Post preview image is truncated

--- a/src/assets/sass/custom/_custom.scss
+++ b/src/assets/sass/custom/_custom.scss
@@ -4275,7 +4275,6 @@ p.para18L30 {
   height: 320px;
   text-align: center;
   img {
-    width: 100%;
     height: 100%;
     min-height: 100%;
     object-fit: cover;
